:sparkles: [Feat]: users/id/reservations/request
